Polish: Fix search bar light theme visibility and restore documentation

--- a/source/components/searchbar/searchbar.less
+++ b/source/components/searchbar/searchbar.less
@@ -19,7 +19,7 @@
   }
 }
 
-.f-searchbar.dark {
+.f-searchbar.light {
   background: @bgColorDark;
   color: @colorDark;
   font-size: 1em;
@@ -27,5 +27,16 @@
   input,
   input::placeholder {
     color: @colorDark;
+  }
+}
+
+.f-searchbar.dark {
+  background: #333;
+  color: #fff;
+  font-size: 1em;
+
+  input,
+  input::placeholder {
+    color: #eee;
   }
 }
